// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorHandler should render its children if no errors are thrown 1`] = `
<p>
  Test
</p>
`;

exports[`ErrorHandler should render its fallback when errors are thrown 1`] = `
<p>
  Something went wrong!
</p>
`;
